git-svn-id: svn://svn.r-forge.r-project.org/svnroot/geosphere@7 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/geosphere/DESCRIPTION
+++ b/pkg/geosphere/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: geosphere
 Type: Package
 Title: Spherical Trigonometry
-Version: 0.2
+Version: 0.2-1
 Date: 2009-10-12
 Suggests: sp
 Author: Robert J. Hijmans
