--- a/pkg/geosphere/DESCRIPTION
+++ b/pkg/geosphere/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: geosphere
 Type: Package
 Title: Spherical Trigonometry
-Version: 0.2-3
-Date: 2009-10-17
+Version: 0.2-4
+Date: 2009-10-18
 Suggests: sp
-Author: Robert J. Hijmans
+Author: Robert J. Hijmans, Ed Williams, Chris Vennes
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description:  Spherical trigonometry for geographic applications
 License: GPL
