--- a/pkg/geosphere/DESCRIPTION
+++ b/pkg/geosphere/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: geosphere
 Type: Package
 Title: Spherical Trigonometry
-Version: 1.1.2
-Date: 10-April-2010
-Suggests: sp
+Version: 1.1.3
+Date: 19-April-2010
+Depends: methods
+Suggests: sp, raster
 Author: Robert J. Hijmans, Ed Williams, Chris Vennes
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description:  Spherical trigonometry for geographic applications
