git-svn-id: svn://svn.r-forge.r-project.org/svnroot/geosphere@144 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/geosphere/DESCRIPTION
+++ b/pkg/geosphere/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Spherical Trigonometry
 Version: 1.2-21
 Date: 18-May-2011
-Depends: methods
+Depends: methods, R (>= 2.10.0)
 Suggests: sp, raster
 Author: Robert J. Hijmans, Ed Williams, Chris Vennes
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
