--- a/pkg/geosphere/DESCRIPTION
+++ b/pkg/geosphere/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Spherical Trigonometry
 Version: 1.2-26
 Date: 19-September-2011
-Depends: methods, R (>= 2.10.0)
-Suggests: sp, raster
+Depends: methods, sp, R (>= 2.10.0)
+Suggests: raster
 Author: Robert J. Hijmans, Ed Williams, Chris Vennes
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description:  Spherical trigonometry for geographic applications
