--- a/pkg/geosphere/DESCRIPTION
+++ b/pkg/geosphere/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: geosphere
 Type: Package
 Title: Spherical Trigonometry
-Version: 1.3-1
-Date: 30-March-2013
+Version: 1.3-2
+Date: 2013-07-02
 Depends: methods, sp, R (>= 2.10.0)
 Suggests: raster
 Author: Robert J. Hijmans, Ed Williams, Chris Vennes
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description:  Spherical trigonometry for geographic applications
-License: GPL
+License: GPL (>=3)
 LazyLoad: yes
