--- a/pkg/geosphere/DESCRIPTION
+++ b/pkg/geosphere/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: geosphere
 Type: Package
 Title: Spherical Trigonometry
-Version: 1.3-6
-Date: 2013-12-28
-Depends: methods, sp, R (>= 2.10.0)
-Suggests: raster
+Version: 1.3-8
+Date: 2014-1-17
+Depends: sp, R (>= 2.10.0)
+Suggests: methods, raster
 Authors@R: c(
 	person("Robert J.", "Hijmans", role = c("cre", "aut"),  email = "r.hijmans@gmail.com"),
 	person("Ed", "Williams", role = "ctb"),
 	person("Chris", "Vennes", role = "ctb"))
-Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description:  Spherical trigonometry for geographic applications
 License: GPL (>=3)
 LazyLoad: yes
