--- a/pkg/geosphere/DESCRIPTION
+++ b/pkg/geosphere/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: geosphere
 Type: Package
 Title: Spherical Trigonometry
-Version: 1.3-11
-Date: 2014-9-8
+Version: 1.3-12
+Date: 2015-3-12
 Depends: sp, R (>= 2.10.0)
 Suggests: methods, raster
 Authors@R: c(
 	person("Robert J.", "Hijmans", role = c("cre", "aut"),  email = "r.hijmans@gmail.com"),
 	person("Ed", "Williams", role = "ctb"),
 	person("Chris", "Vennes", role = "ctb"))
-Description:  Spherical trigonometry for geographic applications
+Description: Spherical trigonometry for geographic applications. That is, compute distances and related measures for angular (longitude/latitude) locations. 
 License: GPL (>=3)
 LazyLoad: yes
