--- a/pkg/geosphere/DESCRIPTION
+++ b/pkg/geosphere/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: geosphere
 Type: Package
 Title: Spherical Trigonometry
-Version: 1.5-5
-Date: 2016-06-14
-Depends: sp, R (>= 3.0.0)
+Version: 1.5-6
+Date: 2017-01-08
+Imports: sp
+Depends: R (>= 3.0.0)
 Suggests: methods, raster
 Authors@R: c(
 	person("Robert J.", "Hijmans", role = c("cre", "aut"),  email = "r.hijmans@gmail.com"),
